# mingwpath

./: .gitignore  AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  cleanup  config.h.in  configure  configure.ac
src/: main.c  mingwpath.c  mingwpath.h  shellfolders.c  wmain.c
